--- a/Mohaeng/Mohaeng/Resources/Storyboards/Challenge/Course.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Challenge/Course.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TuI-sr-lBb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TuI-sr-lBb">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -46,7 +45,7 @@
         <scene sceneID="IVp-gs-VCh">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TuI-sr-lBb" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="챌린지" image="challengeIcon" id="cUU-n5-gkM"/>
+                    <tabBarItem key="tabBarItem" title="챌린지" image="tabIcnChallenge0" id="cUU-n5-gkM"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="gGg-fW-Rh7">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -63,7 +62,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="challengeIcon" width="28" height="28"/>
+        <image name="tabIcnChallenge0" width="28" height="28"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
