--- a/Mohaeng/Mohaeng/Resources/Storyboards/Feed/Feed.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Feed/Feed.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tBu-WQ-FT9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tBu-WQ-FT9">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -46,10 +45,10 @@
                                 </constraints>
                             </view>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zJm-TA-3Ki">
-                                <rect key="frame" x="350" y="753" width="48" height="49"/>
+                                <rect key="frame" x="333" y="737" width="65" height="65"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="48" id="hJD-24-TBt"/>
-                                    <constraint firstAttribute="height" constant="49" id="ws3-PI-9jP"/>
+                                    <constraint firstAttribute="width" constant="65" id="hJD-24-TBt"/>
+                                    <constraint firstAttribute="height" constant="65" id="ws3-PI-9jP"/>
                                 </constraints>
                                 <state key="normal" image="floating"/>
                                 <connections>
@@ -88,7 +87,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="tBu-WQ-FT9" sceneMemberID="viewController">
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
-                    <tabBarItem key="tabBarItem" title="피드" image="feedIcon" id="Cnl-rA-Dil"/>
+                    <tabBarItem key="tabBarItem" title="피드" image="tabIcnFeed0" id="Cnl-rA-Dil"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="zZi-Ya-Ygn">
                         <autoresizingMask key="autoresizingMask"/>
@@ -104,8 +103,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="feedIcon" width="28" height="28"/>
-        <image name="floating" width="52" height="52"/>
+        <image name="floating" width="78" height="78"/>
+        <image name="tabIcnFeed0" width="28" height="28"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
