--- a/Mohaeng/Mohaeng/Resources/Storyboards/Home/Home.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Home/Home.storyboard
@@ -9,6 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="GmarketSansTTFBold.ttf">
+            <string>GmarketSansTTFBold</string>
+        </array>
         <array key="GmarketSansTTFMedium.ttf">
             <string>GmarketSansTTFMedium</string>
         </array>
@@ -22,44 +25,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aBgGrp" translatesAutoresizingMaskIntoConstraints="NO" id="ddC-dI-ZRd">
-                                <rect key="frame" x="0.0" y="-12" width="414" height="875"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ddC-dI-ZRd">
+                                <rect key="frame" x="0.0" y="-12" width="414" height="925"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M6l-iR-QUJ">
-                                <rect key="frame" x="24" y="749" width="366" height="50"/>
+                                <rect key="frame" x="24" y="743" width="366" height="56"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KAB-QO-e2z">
-                                <rect key="frame" x="24" y="749" width="366" height="50"/>
+                                <rect key="frame" x="24" y="743" width="366" height="56"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.44" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="1t9-IJ-Efp"/>
+                                    <constraint firstAttribute="height" constant="56" id="1t9-IJ-Efp"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OEl-4P-pUw">
-                                <rect key="frame" x="106.33333333333333" y="774" width="0.0" height="0.0"/>
+                                <rect key="frame" x="106.33333333333333" y="771" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="코스 진행률 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QEL-OO-URg">
-                                <rect key="frame" x="40" y="767" width="58.333333333333343" height="14.333333333333371"/>
+                                <rect key="frame" x="40" y="764" width="58.333333333333343" height="14.333333333333371"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                 <color key="textColor" red="1" green="0.76862745098039209" blue="0.32549019607843138" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xqV-sk-UiK">
-                                <rect key="frame" x="24" y="121" width="379" height="0.0"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xqV-sk-UiK">
+                                <rect key="frame" x="24" y="123" width="379" height="24"/>
                                 <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dfe-49-RBu">
-                                <rect key="frame" x="4" y="210.33333333333334" width="88" height="44"/>
+                                <rect key="frame" x="4" y="204" width="88" height="44"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="H7M-wz-W4e">
-                                <rect key="frame" x="4" y="210.33333333333334" width="88" height="44"/>
+                                <rect key="frame" x="4" y="204" width="88" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="88" id="Irb-vJ-JP4"/>
                                     <constraint firstAttribute="height" constant="44" id="x06-Zk-gEf"/>
@@ -68,26 +71,26 @@
                                 <color key="trackTintColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
                             </progressView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="nJu-n7-rBq">
-                                <rect key="frame" x="41.333333333333336" y="220" width="13.333333333333336" height="25"/>
+                                <rect key="frame" x="23" y="194.66666666666666" width="50" height="62.999999999999972"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Staricn" translatesAutoresizingMaskIntoConstraints="NO" id="Oc5-PJ-7iM">
-                                        <rect key="frame" x="0.0" y="0.0" width="13.333333333333334" height="13"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="13"/>
                                         <color key="tintColor" red="0.33333333333333331" green="0.25882352941176467" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5vJ-mh-pWb">
-                                        <rect key="frame" x="0.0" y="13" width="13.333333333333334" height="12"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
+                                        <rect key="frame" x="0.0" y="13" width="50" height="50"/>
+                                        <fontDescription key="fontDescription" name="GmarketSansTTFBold" family="Gmarket Sans TTF" pointSize="0.0"/>
                                         <color key="textColor" red="0.33333333329999998" green="0.25882352939999997" blue="0.22352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ohc-G9-CHG">
-                                <rect key="frame" x="24" y="298.33333333333331" width="44" height="44"/>
+                                <rect key="frame" x="24" y="292" width="44" height="44"/>
                                 <color key="backgroundColor" white="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ys8-L7-pM4">
-                                <rect key="frame" x="24" y="298.33333333333331" width="44" height="44"/>
+                                <rect key="frame" x="24" y="292" width="44" height="44"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="closetIcn" translatesAutoresizingMaskIntoConstraints="NO" id="Skn-EI-MHL">
                                         <rect key="frame" x="6.3333333333333339" y="6.6666666666666874" width="31.333333333333329" height="30.666666666666671"/>
@@ -102,7 +105,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="77Y-vP-3CA">
-                                <rect key="frame" x="129" y="210.33333333333334" width="285" height="426.66666666666663"/>
+                                <rect key="frame" x="129" y="204" width="285" height="427"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
@@ -112,11 +115,10 @@
                             <constraint firstItem="QEL-OO-URg" firstAttribute="centerY" secondItem="KAB-QO-e2z" secondAttribute="centerY" id="2sw-JJ-5O3"/>
                             <constraint firstItem="M6l-iR-QUJ" firstAttribute="top" secondItem="KAB-QO-e2z" secondAttribute="top" id="5GP-RD-ToT"/>
                             <constraint firstItem="dfe-49-RBu" firstAttribute="bottom" secondItem="H7M-wz-W4e" secondAttribute="bottom" id="AOa-Jx-EiB"/>
-                            <constraint firstItem="77Y-vP-3CA" firstAttribute="firstBaseline" secondItem="xqV-sk-UiK" secondAttribute="firstBaseline" constant="70" id="BST-7z-vg8"/>
                             <constraint firstItem="ys8-L7-pM4" firstAttribute="top" secondItem="H7M-wz-W4e" secondAttribute="bottom" constant="44" id="Fga-o8-vbG"/>
                             <constraint firstItem="Ohc-G9-CHG" firstAttribute="top" secondItem="ys8-L7-pM4" secondAttribute="top" id="H0X-Tz-y8Y"/>
                             <constraint firstItem="M6l-iR-QUJ" firstAttribute="top" secondItem="77Y-vP-3CA" secondAttribute="bottom" constant="112" id="PiZ-Dk-Nt7"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="ddC-dI-ZRd" secondAttribute="bottom" constant="-50" id="R50-1u-2aU"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="ddC-dI-ZRd" secondAttribute="bottom" constant="-100" id="R50-1u-2aU"/>
                             <constraint firstItem="Ohc-G9-CHG" firstAttribute="bottom" secondItem="ys8-L7-pM4" secondAttribute="bottom" id="RJu-TX-ZZh"/>
                             <constraint firstItem="M6l-iR-QUJ" firstAttribute="bottom" secondItem="KAB-QO-e2z" secondAttribute="bottom" id="Ret-fP-3i3"/>
                             <constraint firstItem="KAB-QO-e2z" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="U1G-3H-8Nh"/>
@@ -141,7 +143,8 @@
                             <constraint firstItem="xqV-sk-UiK" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="roG-ar-lhP"/>
                             <constraint firstItem="ddC-dI-ZRd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="-100" id="sNR-15-PEy"/>
                             <constraint firstItem="OEl-4P-pUw" firstAttribute="centerY" secondItem="KAB-QO-e2z" secondAttribute="centerY" id="uth-sH-OS2"/>
-                            <constraint firstItem="xqV-sk-UiK" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="33" id="vRC-ol-91r"/>
+                            <constraint firstItem="xqV-sk-UiK" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="35" id="vRC-ol-91r"/>
+                            <constraint firstItem="H7M-wz-W4e" firstAttribute="top" secondItem="xqV-sk-UiK" secondAttribute="bottom" constant="57" id="wTF-LT-iR2"/>
                             <constraint firstItem="M6l-iR-QUJ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="yTg-Po-0Pq"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="xqV-sk-UiK" secondAttribute="trailing" constant="11" id="yaE-Ac-UFe"/>
                             <constraint firstItem="77Y-vP-3CA" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="zjn-d5-2pb"/>
@@ -172,7 +175,7 @@
         <scene sceneID="lmj-xh-HBQ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Hev-nF-z4D" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="홈" image="homeIcon" id="QLy-Nz-Kmc"/>
+                    <tabBarItem key="tabBarItem" title="홈" image="tabIcnHome0" id="QLy-Nz-Kmc"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="pxm-te-vy3">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -191,9 +194,8 @@
     </scenes>
     <resources>
         <image name="Staricn" width="13.333333015441895" height="13"/>
-        <image name="aBgGrp" width="375" height="746"/>
         <image name="closetIcn" width="31.333333969116211" height="30.666666030883789"/>
-        <image name="homeIcon" width="28" height="28"/>
+        <image name="tabIcnHome0" width="28" height="28"/>
         <namedColor name="Black">
             <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
