--- a/Mohaeng/Mohaeng/Sources/Views/MyDrawerCollectionReusableView.xib
+++ b/Mohaeng/Mohaeng/Sources/Views/MyDrawerCollectionReusableView.xib
@@ -13,23 +13,23 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MyDrawerCollectionReusableView" customModule="Journey" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MyDrawerCollectionReusableView" customModule="Mohaeng" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyDrawerCollectionReusableView" id="U6b-Vx-4bR" customClass="MyDrawerCollectionReusableView" customModule="Journey" customModuleProvider="target">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyDrawerCollectionReusableView" id="U6b-Vx-4bR" customClass="MyDrawerCollectionReusableView" customModule="Mohaeng" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="331" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WTO-1t-KlT">
                     <rect key="frame" x="0.0" y="0.0" width="331" height="80"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="21년 06월 소확행" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unJ-74-mHL">
-                            <rect key="frame" x="24" y="30.5" width="114" height="19"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="21년 06월 안부" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unJ-74-mHL">
+                            <rect key="frame" x="24" y="32" width="110" height="16"/>
                             <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="16"/>
                             <color key="textColor" name="Black1Text"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vy6-0d-YVb">
-                            <rect key="frame" x="142" y="29" width="20" height="22"/>
+                            <rect key="frame" x="138" y="29" width="20" height="22"/>
                             <color key="tintColor" name="hotPink"/>
                             <state key="normal" image="btnDown"/>
                             <connections>
