--- a/Mohaeng/Mohaeng/Resources/Storyboards/Auth/SignUpThird.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Auth/SignUpThird.storyboard
@@ -18,39 +18,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="닉네임 설정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="07g-md-OcR">
-                                <rect key="frame" x="24" y="77" width="100" height="26.333333333333329"/>
+                                <rect key="frame" x="24" y="82" width="100" height="26.333333333333329"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nickNameImage" translatesAutoresizingMaskIntoConstraints="NO" id="rSm-lZ-pqn">
-                                <rect key="frame" x="87.666666666666686" y="127.33333333333331" width="200" height="200"/>
+                                <rect key="frame" x="87.666666666666686" y="132.33333333333334" width="200" height="200.00000000000003"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="HJr-B2-Sqj"/>
                                     <constraint firstAttribute="width" constant="200" id="Lda-VN-bca"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="닉네임 입력(한글 6자 이내)" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8vR-cA-ldV">
-                                <rect key="frame" x="24" y="365.33333333333331" width="327" height="18.666666666666686"/>
+                                <rect key="frame" x="24" y="370.33333333333331" width="327" height="18.666666666666686"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KnW-qp-7rg">
-                                <rect key="frame" x="24" y="392" width="327" height="1"/>
+                                <rect key="frame" x="24" y="397" width="327" height="1"/>
                                 <color key="backgroundColor" name="Grey3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="FSD-b2-UwM"/>
                                 </constraints>
                             </view>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="사용 불가능한 닉네임입니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fH8-vg-Zu1">
-                                <rect key="frame" x="241.33333333333334" y="405" width="109.66666666666666" height="12"/>
+                                <rect key="frame" x="241.33333333333334" y="410" width="109.66666666666666" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a2H-8P-CbD">
-                                <rect key="frame" x="24" y="441" width="327" height="40"/>
+                                <rect key="frame" x="24" y="446" width="327" height="40"/>
                                 <color key="backgroundColor" name="DeepYellow"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="wcF-gd-1y5"/>
@@ -78,7 +78,7 @@
                             <constraint firstItem="rSm-lZ-pqn" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="d0d-mN-Rya"/>
                             <constraint firstItem="8vR-cA-ldV" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="iHR-oS-b35"/>
                             <constraint firstItem="KnW-qp-7rg" firstAttribute="leading" secondItem="8vR-cA-ldV" secondAttribute="leading" id="ixC-R5-SlP"/>
-                            <constraint firstItem="07g-md-OcR" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="33" id="kWr-8r-cpk"/>
+                            <constraint firstItem="07g-md-OcR" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="38" id="kWr-8r-cpk"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="8vR-cA-ldV" secondAttribute="trailing" constant="24" id="nYN-fB-TEv"/>
                             <constraint firstItem="fH8-vg-Zu1" firstAttribute="trailing" secondItem="KnW-qp-7rg" secondAttribute="trailing" id="ncf-la-HHU"/>
                             <constraint firstItem="07g-md-OcR" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="wJW-5Y-xrE"/>
